--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+html,
+body,
+#root {
+	height: 99%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root {
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 25px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.centralDiv {
+	display: flex;
+	flex-direction: column;
+	justify-self: center;
+	align-self: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+fieldset {
+	border-width: 0.2em;
+	border-style: dashed;
+	border-color: #2bb;
 }
 
-.App-link {
-  color: #61dafb;
+input {
+	font-size: inherit;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+	font-size: inherit;
+}
+
+form > div {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	padding: 0.5em;
+	margin: 0.5em;
+	line-height: 1.5em;
+}
+
+form > div > div {
+	margin-left: 0.5em;
+	margin-right: 0.5em;
+}
+
+fieldset legend {
+	font-style: italic;
+	color: #0f8;
+}
+
+.formError {
+	padding-top: 0.3em;
+	padding-bottom: 0.3em;
+	padding-left: 0.5em;
+	padding-right: 0.5em;
+	font-size: 0.8em;
+	font-style: italic;
+	color: #a00;
+	background-color: #faf;
+	border-radius: 1em;
 }
